--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamster playground Key Generator</title>
+    <title>Hamster Key Generator</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -11,31 +11,51 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hamster Key Generator</h1>
+        <h1>Hamster Playground Key Generator</h1>
         <div id="gameSelectContainer" class="grid-container">
-	<div class="game-option" data-game="13">
-            <img src="https://cdn.hamsterkombat.io/stone_age/image.webp" alt="Stone Age"">
-            <p>Stone Age</p>
-	</div>
+	<div class="game-option" data-game="18">
+                <img src="https://cdn.hamsterkombat.io/infected_frontier/image.webp" alt="Infected Frontier">
+                <p>Infected Frontier</p>
+            </div>
+	<div class="game-option" data-game="17">
+                <img src="https://cdn.hamsterkombat.io/countmasters/image.webp" alt="Pin Out Master">
+                <p>Count Masters</p>
+            </div>
+	<div class="game-option" data-game="16">
+                <img src="https://cdn.hamsterkombat.io/pin_out/image.webp" alt="Pin Out Master">
+                <p>Pin Out Master</p>
+            </div>
+	<div class="game-option" data-game="15">
+                <img src="https://cdn.hamsterkombat.io/hide_balls/image.webp" alt="Hide Ball">
+                <p>Hide Ball</p>
+            </div>
+            <div class="game-option" data-game="14">
+                <img src="https://cdn.hamsterkombat.io/bouncemasters/image.webp" alt="Bouncemasters">
+                <p>Bouncemasters</p>
+            </div>
+            <div class="game-option" data-game="13">
+                <img src="https://cdn.hamsterkombat.io/stone_age/image.webp" alt="Stone Age">
+                <p>Stone Age</p>
+            </div>
             <div class="game-option" data-game="12">
-            <img src="https://cdn.hamsterkombat.io/fluff/image.webp" alt="Fluff"">
-            <p>Fluff Crusade</p>
+                <img src="https://cdn.hamsterkombat.io/fluff/image.webp" alt="Fluff Crusade">
+                <p>Fluff Crusade</p>
             </div>
             <div class="game-option" data-game="10">
-            <img src="https://cdn.hamsterkombat.io/tile_trio/image.webp" alt="CafeDash"">
-            <p>Tile Trio</p>
+                <img src="https://cdn.hamsterkombat.io/tile_trio/image.webp" alt="Tile Trio">
+                <p>Tile Trio</p>
             </div>
-			<div class="game-option" data-game="11">
-            <img src="https://cdn.hamsterkombat.io/zoopolis/image.webp" alt="Zoopolis"">
-            <p>Zoopolis</p>
+            <div class="game-option" data-game="11">
+                <img src="https://cdn.hamsterkombat.io/zoopolis/image.webp" alt="Zoopolis">
+                <p>Zoopolis</p>
             </div>
             <div class="game-option" data-game="8">
-            <img src="https://cdn.hamsterkombat.io/mow_trim/image.webp" alt="Polysphere">
-            <p>Mow and Trim</p>
+                <img src="https://cdn.hamsterkombat.io/mow_trim/image.webp" alt="Mow and Trim">
+                <p>Mow and Trim</p>
             </div>
             <div class="game-option" data-game="7">
-            <img src="https://cdn.hamsterkombat.io/polysphere/image.webp" alt="Polysphere">
-            <p>Polysphere</p>
+                <img src="https://cdn.hamsterkombat.io/polysphere/image.webp" alt="Polysphere">
+                <p>Polysphere</p>
             </div>
             <div class="game-option" data-game="6">
                 <img src="https://cdn.hamsterkombat.io/twerk/image.webp" alt="Twerk Race 3D">
@@ -84,8 +104,8 @@
         <p id="copyStatus" class="hidden">Keys copied to clipboard!</p>
         
         <div class="footer">
-            <p>Join our telegram crypto community with the button bellow</p>
-            <button id="sourceCode">DH-CRYPTOFAM</button>
+            <p>Use the button below to join our Telegram crypto community</p>
+            <button id="sourceCode">web3-Hostspot</button>
 			<button id="themeToggleBtn" onclick="toggleTheme()"><i id="themeIcon" class="fas fa-sun"></i></button>
         </div>
     </div>
