--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <div class="container">
         <h1>Hamster Playground Key Generator</h1>
         <div id="gameSelectContainer" class="grid-container">
+	<div class="game-option" data-game="20">
+                <img src="https://cdn.hamsterkombat.io/factory_world/image.webp" alt="Factory World">
+                <p>Factory World</p>
+            </div>
+	<div class="game-option" data-game="19">
+                <img src="https://cdn.hamsterkombat.io/among_water/image.webp" alt="Infected Frontier">
+                <p>Among Water</p>
+            </div>
 	<div class="game-option" data-game="18">
                 <img src="https://cdn.hamsterkombat.io/infected_frontier/image.webp" alt="Infected Frontier">
                 <p>Infected Frontier</p>
@@ -104,8 +112,8 @@
         <p id="copyStatus" class="hidden">Keys copied to clipboard!</p>
         
         <div class="footer">
-            <p>Use the button below to join our Telegram crypto community</p>
-            <button id="sourceCode">web3-Hostspot</button>
+            <p>Use the button bellow to join our telegram crypto community</p>
+            <button id="sourceCode">web3Hotspot</button>
 			<button id="themeToggleBtn" onclick="toggleTheme()"><i id="themeIcon" class="fas fa-sun"></i></button>
         </div>
     </div>
